# bsuir

./: README.md
3rd_sem/МаОсИС/Lab1/: Lab_1_Glasses.scs
3rd_sem/МаОсИС/Lab3/: Lab_3_Изобретатель.gwf
3rd_sem/МаОсИС/Lab4/patterns/: pattern2.gwf  pattern3.gwf  pattern5.gwf  pattern6.gwf  pattern7.gwf  pattern9.gwf
3rd_sem/МаОсИС/Lab4/source/: source_lab2_1.gwf  source_lab2_4.gwf
3rd_sem/ОТИС/: Lab_3_otis.docx  Lab_4_otis.docx
3rd_sem/ППОИС/DetailFactory/: CMakeLists.txt
3rd_sem/ППОИС/DetailFactory/inc/: factory.h
3rd_sem/ППОИС/DetailFactory/src/: details.cpp  employees.cpp  factory.cpp
3rd_sem/ППОИС/DetailFactory/test/: detail_test.cpp  machine_test.cpp
3rd_sem/ППОИС/TicTacToeGame/: Doxyfile
3rd_sem/ППОИС/TicTacToeGame/doxygen/html/: GameField_8h_source.html  GameLine_8h_source.html  classGameField__coll__graph.dot  classGameLine-members.html  classGameLine.html  classTicTacToe-members.html  classTicTacToe__inherit__graph.dot  classes.html  files.html  graph_legend.html  index.html  inherit_graph_0.dot  inherit_graph_3.dot  structpair.html
3rd_sem/ППОИС/TicTacToeGame/doxygen/html/search/: all_1.js  classes_0.js  classes_2.js
3rd_sem/ППОИС/TicTacToeGame/inc/: GameCell.h  GameField.h
3rd_sem/ППОИС/TicTacToeGame/inc/html/: _game_cell_8cpp__incl.dot  _game_field_8cpp.html  _game_field_8cpp__incl.dot  _game_line_8cpp__incl.dot  _tic_tac_toe_8cpp.html  _tic_tac_toe_8cpp__incl.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  graph_legend.html  index.html
3rd_sem/ППОИС/TicTacToeGame/inc/html/search/: all_1.js  files_0.js  files_1.js
3rd_sem/ППОИС/TicTacToeGame/src/: GameCell.cpp  GameLine.cpp
3rd_sem/ППОИС/TicTacToeGame/test/: CMakeLists.txt  tictactoe_test.cpp
4th_sem/aois/: README.md
4th_sem/aois/lab1/: .gitignore  CMakeLists.txt  main.cpp
4th_sem/aois/lab1/src/: AdditionalForm.cpp  AdditionalForm.h  BinaryInt.cpp  BinaryInt.h  BinaryNumber.cpp  BinaryNumber.h  DirectForm.cpp  DirectForm.h  ReverseForm.cpp  ReverseForm.h
4th_sem/aois/lab1/test/: CMakeLists.txt  test.cpp
4th_sem/maosis/: README.md  sem4_lab1.gwf
4th_sem/maosis/lab1/: sem4_lab1.gwf
4th_sem/maosis/lab2/: sem4_lab2.gwf
4th_sem/maosis/lab3/: sem4_lab3.gwf
4th_sem/ppois/: README.md
МаОсИС/: Lab_1_Изобретатель.gwf
ОС/: Lab_1_OS.sh
ОТИС/: Lab_2_otis.docx
Первый сем/МаОсИС/: Lab_2_Optical_instruments.scs
Первый сем/ОС/: OS_Lab1.docx
Третий сем/МаОсИС/: Lab_2_Optical_instruments.scs  Lab_3_Изобретатель.gwf  Lab_3_Очки.gwf
Третий сем/МаОсИС/Lab1/: Lab_1_Очки.gwf
Третий сем/МаОсИС/Lab3/: Lab_3_Очки.gwf
Третий сем/МаОсИС/Lab4/patterns/: pattern1.gwf  pattern10.gwf  pattern4.gwf  pattern8.gwf
Третий сем/МаОсИС/Lab4/source/: source_lab2_2.gwf  source_lab2_3.gwf  source_lab2_5and6.gwf  source_lab2_7and8.gwf  source_lab2_9and10.gwf
Третий сем/ОС/: osLab2var3.cpp
Третий сем/ОТИС/: Микрофон.gwf
Третий сем/ППОИС/DetailFactory/inc/: details.h  employees.h  machines.h
Третий сем/ППОИС/DetailFactory/src/: machines.cpp  main.cpp
Третий сем/ППОИС/DetailFactory/test/: CMakeLists.txt  employee_test.cpp
Третий сем/ППОИС/TicTacToeGame/: CMakeLists.txt  main.cpp
Третий сем/ППОИС/TicTacToeGame/doxygen/html/: GameCell_8h_source.html  TicTacToe_8h_source.html  annotated.html  classGameCell-members.html  classGameCell.html  classGameField-members.html  classGameField.html  classGameField__inherit__graph.dot  classGameLine__coll__graph.dot  classTicTacToe.html  classTicTacToe__coll__graph.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bfccd401955b95cf8c75461437045ac0.html  hierarchy.html  inherit_graph_1.dot  inherit_graph_2.dot  inherits.html  structpair-members.html
Третий сем/ППОИС/TicTacToeGame/doxygen/html/search/: all_0.js  all_2.js  classes_1.js
Третий сем/ППОИС/TicTacToeGame/inc/: GameLine.h  TicTacToe.h
Третий сем/ППОИС/TicTacToeGame/inc/html/: _game_cell_8cpp.html  _game_line_8cpp.html  files.html
Третий сем/ППОИС/TicTacToeGame/inc/html/search/: all_0.js  searchdata.js
Третий сем/ППОИС/TicTacToeGame/src/: GameField.cpp  TicTacToe.cpp
Третий сем/ППОИС/TicTacToeGame/test/: game_cell_test.cpp  game_field_test.cpp  game_line_test.cpp
